[package]
name = "moisture"
description = "Moisture is a Rust-based parsing library intended for use with procedural macros!"
repository = "https://github.com/frank2/moisture"
version = "0.1.0"
authors = ["frank2@dc949.org"]
edition = "2021"
license = "GPL-3.0"
keywords = ["parsing", "macros"]
readme = "README.md"
exclude = ["*~", "#*", "src/#*", "notes.org"]
documentation = "https://docs.rs/moisture"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.36"
quote = "1.0.17"
rand = "0.8.5"
syn = { version = "1.0.91", features = ["full", "extra-traits"] }
